Unit2_Ass2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:36:35 **** Incremental Build of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
..\src\Q7.c: In function 'main':
..\src\Q7.c:22:10: warning: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^
..\src\Q7.c:22:10: error: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Q7.c:23:5: error: expected expression before 'else'
     else
     ^~~~
..\src\Q7.c:31:1: error: expected ';' before '}' token
 }
 ^
..\src\Q7.c:17:20: warning: unused variable 'factorial' [-Wunused-variable]
  unsigned long int factorial=1;
                    ^~~~~~~~~
..\src\Q7.c:16:9: warning: unused variable 'count' [-Wunused-variable]
  int n, count;
         ^~~~~
19:42:37 **** Rebuild of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
..\src\Q7.c: In function 'main':
..\src\Q7.c:22:10: warning: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^
..\src\Q7.c:22:10: error: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Q7.c:23:5: error: expected expression before 'else'
     else
     ^~~~
..\src\Q7.c:31:1: error: expected ';' before '}' token
 }
 ^
..\src\Q7.c:17:20: warning: unused variable 'factorial' [-Wunused-variable]
  unsigned long int factorial=1;
                    ^~~~~~~~~
..\src\Q7.c:16:9: warning: unused variable 'count' [-Wunused-variable]
  int n, count;
         ^~~~~
19:43:29 **** Incremental Build of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
..\src\Q7.c: In function 'main':
..\src\Q7.c:24:10: warning: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^
..\src\Q7.c:24:10: error: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Q7.c:25:5: error: expected expression before 'else'
     else
     ^~~~
..\src\Q7.c:33:1: error: expected ';' before '}' token
 }
 ^
..\src\Q7.c:17:20: warning: unused variable 'factorial' [-Wunused-variable]
  unsigned long int factorial=1;
                    ^~~~~~~~~
..\src\Q7.c:16:9: warning: unused variable 'count' [-Wunused-variable]
  int n, count;
         ^~~~~
19:44:02 **** Incremental Build of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
..\src\Q7.c: In function 'main':
..\src\Q7.c:24:10: warning: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^
..\src\Q7.c:24:10: error: missing terminating " character
   printf("Error!!! Factorial of negative number doesn't exist”);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Q7.c:25:5: error: expected expression before 'else'
     else
     ^~~~
..\src\Q7.c:34:1: error: expected ';' before '}' token
 }
 ^
..\src\Q7.c:17:20: warning: unused variable 'factorial' [-Wunused-variable]
  unsigned long int factorial=1;
                    ^~~~~~~~~
..\src\Q7.c:16:9: warning: unused variable 'count' [-Wunused-variable]
  int n, count;
         ^~~~~
19:46:07 **** Incremental Build of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
gcc -o Q7.exe "src\\Q7.o" 
19:47:02 **** Incremental Build of configuration Debug for project Q7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q7.o" "..\\src\\Q7.c" 
gcc -o Q7.exe "src\\Q7.o" 
19:56:44 **** Rebuild of configuration Debug for project Q8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q8.o" "..\\src\\Q8.c" 
gcc -o Q8.exe "src\\Q8.o" 
19:57:26 **** Incremental Build of configuration Debug for project Q8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q8.o" "..\\src\\Q8.c" 
..\src\Q8.c: In function 'main':
..\src\Q8.c:33:7: warning: missing terminating " character
  case "-':
       ^
..\src\Q8.c:33:7: error: missing terminating " character
  case "-':
       ^~~~
..\src\Q8.c:34:48: error: expected ':' or '...' before ';' token
  printf("%.1f - %.1f = %f",num1,num2,num1-num2);
                                                ^
..\src\Q8.c:49:2: error: expected declaration or statement at end of input
  }
  ^
19:58:07 **** Incremental Build of configuration Debug for project Q8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q8.o" "..\\src\\Q8.c" 
gcc -o Q8.exe "src\\Q8.o" 
19:58:35 **** Incremental Build of configuration Debug for project Q8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q8.o" "..\\src\\Q8.c" 
gcc -o Q8.exe "src\\Q8.o" 
